feat: add witness generation and calculation for circuits
- Implemented `generate_witness.js` to read input from JSON and generate witness files.
- Created `witness_calculator.js` for handling WebAssembly instantiation and witness calculations.
- Added methods for calculating witness and binary witness outputs.
- Introduced error handling for signal management and input validation.
- Added new keys and verification key files for circuit finalization.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-node_modules
-circomlib
-circuits
-keys
-*.zkey
-*.sym
+node_modules/
+circomlib/
+circuits/*.circom
+circuits/*.r1cs
+circuits/*.sym
+circuits/*.js
+circuits/*.json
+!circuits/auth_js/auth.wasm
+
+keys/*.zkey
+!keys/circuit_final.zkey
+
 *.ptau
