--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "circom": "^0.5.46",
     "ethers": "^6.14.1",
     "express": "^5.1.0",
+    "idb-keyval": "^6.2.2",
     "merkletreejs": "^0.5.2",
     "snarkjs": "^0.7.5"
   },
