Add Merkle Tree Check Circuit Implementation
- Introduced a new circuit file `merkle_tree_check.circom` that implements a Merkle Tree verification mechanism.
- The circuit includes a `MultiMux` template for selecting between two inputs based on a selector signal.
- The `MerkleTreeCheck` template processes a leaf node, a root node, and a path through the Merkle Tree, verifying the integrity of the leaf against the root.
- Utilizes SHA-256 hashing for each level of the tree, concatenating the current hash with the corresponding path element.
- The output is validated against the expected root hash.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 node_modules/
 circomlib/
-circuits/*.circom
-circuits/*.r1cs
-circuits/*.sym
-circuits/*.js
-circuits/*.json
-!circuits/auth_js/auth.wasm
 dist/
+
+circuits/auth.sym
 
 keys/*.zkey
 !keys/circuit_final.zkey
